--- a/folderweek-3/myapp/frontend/sum.html
+++ b/folderweek-3/myapp/frontend/sum.html
@@ -13,14 +13,15 @@
         <h1>Simple page</h1>
     </header>
     <main>
-        <form action="" id="loginForm">
-            <div class="subBox">
+        <form action="" id="numberForm" class="form ">
+            <div class="subBox box">
                 <label for="number">Number</label>
-                <input type="text" id="number" name="number" size="16" placeholder="55">
+                <input type="text" id="number" name="number" size="16" placeholder="">
             </div>
-            <button class="btn" type="submit">Click Me</button>
+            <button id="numberbtn" class="btn" type="submit">Click Me</button>
             <p id="result"></p>
         </form>
+
     </main>
 </body>
 
