--- a/folderweek-3/myapp/frontend/myName.html
+++ b/folderweek-3/myapp/frontend/myName.html
@@ -62,7 +62,7 @@
     const nameCookie = async () => {
         // console.log(userName)
         try {
-            const cookieData = await fetchData('https://remote-assignments-cl2w.onrender.com/')
+            const cookieData = await fetchData('https://remote-assignments-cl2w.onrender.com/myName')
             if (cookieData) {
                 // 有資料 隱藏表單
                 nameForm.style.display = "none";
