加裝prettier 重整排版

--- a/folderweek-4/assignment4_AJAX.html
+++ b/folderweek-4/assignment4_AJAX.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment 4: HTML DOM and AJAX (Advanced Optional)</title>
-    <link rel="stylesheet" href="./stylesheet/styleCss.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./stylesheet/styleCss.css" />
+  </head>
+  <body>
     <main>
-        <section></section>
-        <button><span>More</span></button>
+      <section></section>
+      <button><span>More</span></button>
     </main>
     <script src="./js/assignment4_AJAX.js"></script>
-</body>
+  </body>
 </html>
